--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.6.0
 async-timeout==4.0.3
 blinker==1.6.2
 certifi==2022.12.7
+channels==4.0.0
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
@@ -38,6 +39,7 @@ mysqlclient==2.1.1
 odfpy==1.4.1
 openpyxl==3.1.2
 Pillow==9.4.0
+psycopg2==2.9.7
 pycodestyle==2.10.0
 pydantic==1.10.7
 pyflakes==3.0.1
@@ -60,6 +62,7 @@ tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.26.15
 uvicorn==0.22.0
+waitress==2.1.2
 watchfiles==0.19.0
 websockets==11.0.2
 Werkzeug==2.3.6
